# robotx_waypoint_server

.github/workflows/: ROS2-Eloquent.yml
robotx_waypoint_msgs/: CMakeLists.txt  package.xml
robotx_waypoint_msgs/action/: WayPoint.action
robotx_waypoint_server/: CMakeLists.txt  package.xml
robotx_waypoint_server/include/robotx_waypoint_server/: visibility.h  waypoint_server_component.hpp
robotx_waypoint_server/src/: waypoint_server_component.cpp  waypoint_server_node.cpp
